--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
-/* Other rules */
+/* FONTS */
+
+/* COLORS */
+
+/* GLOBAL */
+.wrapper {
+  max-width: 1300px;
+  margin: auto;
+  border: 1px solid red;
+}
