--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -32,6 +32,17 @@
   padding: 0 10px;
   font-size: 16px;
 }
+.Header-input-container {
+  position: relative;
+  /* background-color: yellow; */
+}
+.Header-input-errormessage {
+  position: absolute;
+  color: red;
+  font-size: 12px;
+  bottom: -15px;
+  left: 10px;
+}
 .Header-search-icon {
   cursor: pointer;
   font-size: 24px;
