--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,8 +6,14 @@
 .Header-container {
   display: flex;
   justify-content: space-between;
-  border-bottom: 3px var(--blue) solid;
   padding: 10px;
+  border-bottom: 3px #5bc6f7 solid;
+}
+.Header-container-day {
+  border-bottom: 3px var(--blue) solid;
+}
+.Header-container-night {
+  border-bottom: 3px #5bc6f7 solid;
 }
 .Header-logo-container {
   display: flex;
@@ -28,7 +34,7 @@
   height: 30px;
   margin-right: 20px;
   border: none;
-  border-bottom: 2px var(--blue) solid;
+  /* border-bottom: 2px var(--blue) solid; */
   padding: 0 10px;
   font-size: 16px;
 }
