--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,3 +1,6 @@
-.Main > div:not(:last-child) {
-  border-bottom: 1px solid grey;
+.Main-day > div:not(:last-child) {
+  border-bottom: 1px solid var(--blue);
+}
+.Main-night > div:not(:last-child) {
+  border-bottom: 1px solid #5bc6f7;
 }
