--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 body {
   font-family: "Ubuntu", sans-serif;
   /* background-color: #f2faff; */
-  height: 100%;
+  /* height: 100%; */
 }
 .wrapper {
   max-width: 1200px;
@@ -20,10 +20,18 @@ h1 {
   font-size: 40px;
   font-weight: 800;
 }
+.Loader-container {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* APP */
 .App {
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   color: #fff;
 }
 .App-day {
