--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@ h1 {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 768px) {
+  h1 {
+    font-size: 30px;
+  }
+}
 
 /* APP */
 .App {
