--- a/src/components/Hour.css
+++ b/src/components/Hour.css
@@ -7,7 +7,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-
   color: #fff;
 }
 .Hour-day {
@@ -21,4 +20,27 @@
   width: 75px;
   height: 75px;
   border-radius: 50%;
+}
+.Hour-description {
+  font-size: 13px;
+  font-style: italic;
+}
+
+@media (max-width: 768px) {
+  .Hour {
+    width: 120px;
+    height: 120px;
+  }
+  .Hour-text {
+    font-size: 14px;
+  }
+  .Hour-weather-icon {
+    background-color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+  .Hour-description {
+    font-size: 11px;
+  }
 }
