--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -22,6 +22,10 @@
 .Item-city {
   font-size: 20px;
 }
+.Item-country {
+  font-size: 12px;
+  /* font-style: italic; */
+}
 .Item-weather-icon {
   position: absolute;
   height: 80px;
@@ -80,6 +84,9 @@
   }
   .Item-city {
     font-size: 16px;
+  }
+  .Item-country {
+    font-size: 11px;
   }
   .Item-weather-icon {
     height: 60px;
