--- a/src/components/SearchResult.css
+++ b/src/components/SearchResult.css
@@ -2,6 +2,5 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  /* margin: 10px 0; */
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid var(--light-blue);
 }
