--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,5 +1,4 @@
 .Item {
-  /* height: 80px; */
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
@@ -7,11 +6,6 @@
   justify-content: space-between;
   position: relative;
   cursor: pointer;
-}
-.Item:hover {
-  /* background-color: #ffe484; */
-  /* opacity: 0.5; */
-  transition: 0.5s;
 }
 .Item-left-container {
   max-width: 300px;
@@ -24,7 +18,6 @@
 }
 .Item-country {
   font-size: 12px;
-  /* font-style: italic; */
 }
 .Item-weather-icon {
   position: absolute;
@@ -48,27 +41,25 @@
   text-align: center;
   cursor: pointer;
   margin-bottom: 10px;
-  /* font-size: 16px; */
 }
 .Item-favorite-btn-day {
   border: #fff 2px solid;
-  background-color: #007db9;
+  background-color: var(--dark-blue);
   color: #fff;
 }
 .Item-favorite-btn-day:hover {
   background-color: #fff;
-  color: #007db9;
-  border: #007db9 2px solid;
+  color: var(--dark-blue);
+  border: var(--dark-blue) 2px solid;
   transition: 0.5s;
 }
 .Item-favorite-btn-night {
   border: #fff 2px solid;
-  /* background-color: #005e89; */
   color: #fff;
 }
 .Item-favorite-btn-night:hover {
   background-color: #fff;
-  color: #007db9;
+  color: var(--light-blue);
   transition: 0.5s;
 }
 .Item-star-icon {
@@ -119,23 +110,3 @@
     font-size: 20px;
   }
 }
-/* .Item-favorite-btn-day {
-  border: #fff 2px solid;
-  background-color: #007db9;
-  color: #fff;
-}
-.Item-favorite-btn-day:hover {
-  background-color: #fff;
-  color: #007db9;
-  border: #007db9 2px solid;
-  transition: 0.5s;
-}
-.Item-favorite-btn-night {
-  border: #fff 2px solid;
-  color: #fff;
-}
-.Item-favorite-btn-night:hover {
-  background-color: #fff;
-  color: #007db9;
-  transition: 0.5s;
-} */
